--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-
+<main class="A_main">
 
 
 
@@ -39,47 +39,54 @@
 
 
 <!-- コンテンツ -->
-<div class="contents">
-  <img class="firstview" src="img/firstview.jpg" alt="#">
-  <h1 class="contents_item">Commit to the growth <br>for everyone<br></h1>
-  <h2 class="contents_item2">全ての人の成長にコミットする</h2>
-  <p>Educational Technology Company <br>estra inc since 2019</p>
-</div>
+  <div class="contents">
+    <img class="firstview" src="img/firstview.jpg" alt="#">
+    <h1 class="contents_item">Commit to the growth <br>for everyone<br></h1>
+    <h2 class="contents_item2">全ての人の<span>成長</span>にコミットする</h2>
+    <p>Educational Technology Company <br>estra inc since 2019</p>
+  </div>
 
 
 
 
 <!-- News -->
   <div class="News">
-    <ul>
-      <li>
-        <div class="day">2021/01/01</div>
-        <div class="label">ニュース</div>
-        <div class="text">COACHTECHのサービスが開始されました。</div>
-      </li>
-      <li>
-        <div class="day">2021/01/01</div>
-        <div class="label">ニュース</div>
-        <div class="text">COACHTECHのサービスが開始されました。</div>
-      </li>
-      <li>
-        <div class="day">2021/01/01</div>
-        <div class="label">ニュース</div>
-        <div class="text">COACHTECHのサービスが開始されました。</div>
-      </li>
-      <li>
-        <div class="day">2021/01/01</div>
-        <div class="label">ニュース</div>
-        <div class="text">COACHTECHのサービスが開始されました。</div>
-      </li>
-      <li>
-        <div class="day">2021/01/01</div>
-        <div class="label">ニュース</div>
-        <div class="text">COACHTECHのサービスが開始されました。</div>
-      </li>
-    </ul>
-  </div>
+    <div ></div>
+    <p>News</p>
+    <h2>新着情報</h2>
+      <ul>
+        <li>
+          <div class="day">2021/01/01</div>
+          <div class="label">ニュース</div>
+          <div class="text">COACHTECHのサービスが開始されました。</div>
+        </li>
+        <li>
+          <div class="day">2021/01/01</div>
+          <div class="label">ニュース</div>
+          <div class="text">COACHTECHのサービスが開始されました。</div>
+        </li>
+        <li>
+          <div class="day">2021/01/01</div>
+          <div class="label">ニュース</div>
+          <div class="text">COACHTECHのサービスが開始されました。</div>
+        </li>
+        <li>
+          <div class="day">2021/01/01</div>
+          <div class="label">ニュース</div>
+          <div class="text">COACHTECHのサービスが開始されました。</div>
+        </li>
+        <li>
+          <div class="day">2021/01/01</div>
+          <div class="label">ニュース</div>
+          <div class="text">COACHTECHのサービスが開始されました。</div>
+        </li>
+      </ul>
+    </div>
 
 
+
+
+
+</main>
 </body>
 </html>
